--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
-version: '3.3'
+version: '3.6'
 
 services: 
     twitch_downloader:
-        container_name: ${TWITCH_USERNAME}_twitch
+        container_name: twitch_${TWITCH_USERNAME}
         build: .
         restart: "always"
         environment: 
             TWITCH_USERNAME: ${TWITCH_USERNAME}
             SLEEP_SECONDS: 60
-            DOWNLOAD_DIR: /files/
-        volumes:
-            - ./${TWITCH_USERNAME}:/files/
+            DOWNLOAD_DIR: /home/dev/files/
+            FFMPEG_USER_AGENT: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3554.0 Safari/537.36 
+            # volumes:
+            #     - "files:/home/dev/files/"
+
+volumes:
+    files:
